--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   #flame_collision: ^0.6.0
 
 
+  material_design_icons_flutter: 7.0.7296
+  
+
+
 
 
 
@@ -45,7 +49,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_svg: ^0.22.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -62,12 +66,19 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
 
   assets:
     - assets/images/
+    - assets/pill_icon.png
+    - assets/hasta_icon.png
+    - assets/bayes.png
+    - assets/imageonline/
+
+
 
 
 
